opam-version: "2.0"
name: "gavl"
version: "0.1.6"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-gavl"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" 
  "ocamlfind" {build}
]
depexts: [
  ["gavl-dev"] {os-distribution = "alpine"}
  ["gavl-devel"] {os-distribution = "centos"}
  ["gavl-devel"] {os-distribution = "fedora"}
  ["gavl-devel"] {os-family = "suse"}
  ["libgavl-dev"] {os-distribution = "debian"}
  ["libgavl-dev"] {os-distribution = "ubuntu"}
  ["drfill/liquidsoap/libgavl"] {os = "macos" & os-distribution = "homebrew"}
  ["gavl"] {os-distribution = "arch"}
]
bug-reports: "https://github.com/savonet/ocaml-gavl/issues"
dev-repo: "git+https://github.com/savonet/ocaml-gavl.git"
synopsis:
  "Bindings for the gavl library which provides functions for converting images formats, colorspaces, etc."
